# socle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.gitea/: pull_request_template.md
.gitea/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.gitea/workflows/: ci.yml  release.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  tag.yml
examples/: minimal.rs  with_database.rs  with_ratelimit.rs
src/: config.rs  error.rs  etag.rs  extract.rs  handler_error.rs  http_client.rs  lib.rs  metrics.rs  openapi.rs  org_context.rs  org_isolation.rs  org_policy.rs  request_id.rs
src/adapters/: mod.rs
src/adapters/health/: mod.rs
src/adapters/observability/: openapi.rs  telemetry.rs
src/adapters/security/: enrich_error.rs  mod.rs  rate_limit.rs
src/audit/: mod.rs
src/audit/sinks/: channel.rs  mod.rs  nats.rs  tracing_sink.rs
src/bootstrap/: builder.rs  ctx.rs  serve.rs
src/ports/: auth.rs  health.rs  mod.rs  rate_limit.rs  telemetry.rs
src/testing/: app.rs  handler_assert.rs  mod.rs  postgres.rs  trace.rs
tests/: audit_filter.rs  audit_layer.rs  audit_sinks.rs  integration.rs  org_isolation.rs  org_policy.rs
